Fix for Android 4.2 stock browser not showing webfonts
Android 4.2 does not like text-rendering CSS setting

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -7,7 +7,6 @@ html {
     background-color: #e3e3db;
     color: #333;
     font-size: 62.5%;
-    text-rendering: optimizeLegibility;
 }
 body {
     -webkit-text-size-adjust: 100%;
